# libv8

./: .gclient  .gitignore  Justfile  Makefile  README.md  VERSION
.github/actions/setup-depot-tools/: action.yml
.github/workflows/: auto-tag.yml  build.yml  release.yml  version-check.yml
args/: common.gn  linux.arm64.gn  linux.x64.gn  macos.arm64.gn  macos.x64.gn  windows.arm64.gn  windows.x64.gn
args/profiles/: default.gn  i18n.gn  pointer-compression.gn  sandbox.gn
scripts/: build.sh  check-version.sh  clean.sh  fetch.sh  lib.sh  package.sh  patch-v8.sh
