# Base GN args shared across every target. Kept intentionally minimal:
# anything not listed here uses V8's own default. Per-target files
# (e.g. linux.x64.gn) and profile files override these.
#
# This set mirrors what is known-good in upstream embedders
# (kuoruan/libv8, just-js/v8) so a fresh V8 build is reproducible.

is_debug = false
is_component_build = false
v8_monolithic = true
v8_use_external_startup_data = false
v8_enable_i18n_support = false
v8_enable_test_features = false
symbol_level = 0
strip_debug_info = true
treat_warnings_as_errors = false
