target_os = "linux"
target_cpu = "arm64"
v8_target_cpu = "arm64"

use_sysroot = false
use_lld = false

# Chromium does not publish a Linux_aarch64 prebuilt clang for V8 14.9's
# pinned revision (llvmorg-23-init-…). apt.llvm.org's stable line tops
# out at clang-21 which doesn't know the clang-22+ flags V8 emits.
# Fall back to system gcc/g++ on this target — V8 documents gcc as a
# supported (if less optimized) host compiler. Revisit if V8 ever ships
# an aarch64 prebuilt clang at its expected revision.
is_clang = false
