target_os = "linux"
target_cpu = "arm64"
v8_target_cpu = "arm64"

use_sysroot = false
use_lld = false

# Chromium does not publish a Linux_aarch64 prebuilt clang for V8 14.9's
# pinned revision (llvmorg-23-init-…). apt.llvm.org's stable line tops
# out at clang-21 which doesn't know the clang-22+ flags V8 emits.
# Fall back to system gcc/g++ on this target — but note that V8 14.9
# *also* uses the Clang-only __has_warning preprocessor extension in
# src/base/macros.h without an __clang__ guard, so gcc fails too:
#   error: missing binary operator before token "("
#     __has_warning("-Wlifetime-safety")
# Re-enable this target when V8 either ships an aarch64 prebuilt clang
# at its expected revision or guards the clang-only preprocessor uses.
is_clang = false
