# Pointer compression enabled. Callers MUST be compiled with the same flag.
v8_enable_pointer_compression = true
v8_enable_sandbox = false

# When pointer compression is on, V8 enables partition_alloc's allocator
# shim (CPPGC_POINTER_COMPRESSION), which forward-declares the global
# operator new / operator delete overloads with default visibility.
# macOS 15.5 SDK's libc++ (Xcode 16.4+) declares those same operators
# with hidden visibility, so clang errors with "visibility does not
# match previous declaration" against system libc++. Linking V8's own
# bundled libc++ here keeps the declarations consistent across all
# translation units.
#
# linux-arm64 is the exception: it builds with system gcc-14 + libstdc++
# (V8 14.9's bundled clang prebuilt has no Linux_aarch64 build, see
# args/linux.arm64.gn). The macOS visibility conflict doesn't apply
# (libstdc++, not libc++), and V8's bundled libc++ headers require
# GCC 15+ (they use __is_unbounded_array / __is_pointer / __decay /
# __add_*_reference intrinsics gcc-14 doesn't support), so flipping
# use_custom_libcxx=true there breaks the build at
# libc++abi/cxa_aux_runtime. Keep system libstdc++ on that one target.
if (target_os == "linux" && target_cpu == "arm64") {
  use_custom_libcxx = false
} else {
  use_custom_libcxx = true
}
